--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #E9EBEE">
+    
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
