--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CurrentClean Demo</title>
   </head>
   <body style="background-color: #E9EBEE">
     
